[package]
edition = "2021"
name = "universal-media"
version = "0.0.2-alpha.1"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.12.2", default-features = false, features = ["napi4", "tokio_rt"] }
napi-derive = { version = "2.12.2" }
tokio = { version = "1.0", features = ["full"] }
windows = { version = "0.58.0", features = [
    "Media_Control",
    "Storage_Streams",
    "Foundation_Collections",
    "Foundation",
    "Win32_System_Com",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "implement"
] }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
